added corner alternative and remove script tags

--- a/index.html
+++ b/index.html
@@ -33,8 +33,11 @@
         <h5>Corner</h5>
         <p>Instead of doing 4D 6D [2]8B, you can do 4D [2]8D for 4 less damage.</p>
         <p>Note: This combo will drop at the first [4]6D vs Meitenkun. Against him, omit the [4]6A. </p>
+        <div style="width:100%;height:0px;position:relative;padding-bottom:56.250%;"><iframe src="https://streamable.com/e/9kyhur" frameborder="0" width="100%" height="100%" allowfullscreen style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div>
+        <h5>Corner Alternative</h5>
+        <p>A bit more difficult as you have to let Ash run farther, but is universal.</p>
     </section>
-    <section class="videoBlock container bg-secondary" id="2-meter">
+    <section class="videoBlock container bg-secondary" id="4-meter">
         <h2>4-Meter combos</h2>
         <div style="width:100%;height:0px;position:relative;padding-bottom:56.250%;"><iframe src="https://streamable.com/e/00nuyw" frameborder="0" width="100%" height="100%" allowfullscreen style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div>
         <h5>Midscreen - Universal</h5>
@@ -43,7 +46,7 @@
         <h5>Corner</h5>
         <p>Note: This combo will drop at the first [4]6D vs Meitenkun. Against him, omit the [4]6A AND to get the stun, you will also have to adjust the ender to [2]8D instead of 2D.</p>
     </section>
-    <section class="videoBlock container bg-secondary" id="2-meter">
+    <section class="videoBlock container bg-secondary" id="5-meter">
         <h2>5-Meter combos</h2>
         <div style="width:100%;height:0px;position:relative;padding-bottom:56.250%;"><iframe src="https://streamable.com/e/3mpt6n" frameborder="0" width="100%" height="100%" allowfullscreen style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div>
         <h5>Fullscreen</h5>
@@ -62,7 +65,6 @@
         <p>This route allows Ash to land a 4th [4]6C on Antonov and Heidern, reducing the need for more hits pre-QUICK MAX activation.</p>
     </section>
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <script src="./assets/js/script.js"</script></script>
     <footer class="footer bg-secondary text-light align-text-center">
         <h3>Thanks for reading and watching. If you appreciate my work, please follow me on <a href="https://www.twitch.tv/t_zong">Twitch</a>.</p>
     </footer>
