--- a/index.html
+++ b/index.html
@@ -33,15 +33,18 @@
         <h5>Corner</h5>
         <p>Instead of doing 4D 6D [2]8B, you can do 4D [2]8D for 4 less damage.</p>
         <p>Note: This combo will drop at the first [4]6D vs Meitenkun. Against him, omit the [4]6A. </p>
-        <div style="width:100%;height:0px;position:relative;padding-bottom:56.250%;"><iframe src="https://streamable.com/e/9kyhur" frameborder="0" width="100%" height="100%" allowfullscreen style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div>
+        <br>
+        <div style="width:100%;height:0px;position:relative;padding-bottom:56.250%;"><iframe src="https://streamable.com/e/9kyhur" frameborder="0" width="100%" height="100%" allowfullscreen style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div><br>
         <h5>Corner Alternative</h5>
         <p>A bit more difficult as you have to let Ash run farther, but is universal.</p>
     </section>
     <section class="videoBlock container bg-secondary" id="4-meter">
         <h2>4-Meter combos</h2>
         <div style="width:100%;height:0px;position:relative;padding-bottom:56.250%;"><iframe src="https://streamable.com/e/00nuyw" frameborder="0" width="100%" height="100%" allowfullscreen style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div>
+        <br>
         <h5>Midscreen - Universal</h5>
         <p>This combo works universally, has moderate corner carry and allows Ash to stun from 2A2B (or 2B2A). This Sans Culotte route allows Ash to get the 3rd hit on the second [4]6C post-Sans Culotte, getting you 10 more stun.</p>
+        <br>
         <div style="width:100%;height:0px;position:relative;padding-bottom:56.250%;"><iframe src="https://streamable.com/e/pjn60k" frameborder="0" width="100%" height="100%" allowfullscreen style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div>
         <h5>Corner</h5>
         <p>Note: This combo will drop at the first [4]6D vs Meitenkun. Against him, omit the [4]6A AND to get the stun, you will also have to adjust the ender to [2]8D instead of 2D.</p>
@@ -49,8 +52,11 @@
     <section class="videoBlock container bg-secondary" id="5-meter">
         <h2>5-Meter combos</h2>
         <div style="width:100%;height:0px;position:relative;padding-bottom:56.250%;"><iframe src="https://streamable.com/e/3mpt6n" frameborder="0" width="100%" height="100%" allowfullscreen style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div>
+        <br>
         <h5>Fullscreen</h5>
         <p>This Sans Culotte route will drop vs Heidern, Yamazaki, and Meitenkun.</p>
+        <p>Note: For Heidern and Yamazaki, change the first [4]6C to [4]6A. This will cause the second [4]6C to get its 3rd hit and give you the same amount of stun.</p>
+        <br>
         <div style="width:100%;height:0px;position:relative;padding-bottom:56.250%;"><iframe src="https://streamable.com/e/38q7yx" frameborder="0" width="100%" height="100%" allowfullscreen style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div>
         <h5>Almost Fullscreen</h5>
         <p>This Sans Culotte route is universal but has significantly less corner carry. The 4D QUICK MAX is auto-timed with this route.</p>
@@ -58,8 +64,10 @@
     <section class="videoBlock container bg-secondary" id="2-meter">
         <h2>Character-Specific combos</h2>
         <div style="width:100%;height:0px;position:relative;padding-bottom:56.250%;"><iframe src="https://streamable.com/e/34tau8" frameborder="0" width="100%" height="100%" allowfullscreen style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div>
+        <br>
         <h5>Meitenkun Corner Carry</h5>
         <p>This route requires at least 100 stun before QUICK MAX in order to stun for 4 meters. (2B2A2B > 4B or 5C/5D > 4B)</p>
+        <br>
         <div style="width:100%;height:0px;position:relative;padding-bottom:56.250%;"><iframe src="https://streamable.com/e/z0xzdd" frameborder="0" width="100%" height="100%" allowfullscreen style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div>
         <h5>Antonov and Heidern only</h5>
         <p>This route allows Ash to land a 4th [4]6C on Antonov and Heidern, reducing the need for more hits pre-QUICK MAX activation.</p>
