updated to contain new video links and contain notes for char specifics

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
         <div style="width:100%;height:0px;position:relative;padding-bottom:56.250%;"><iframe src="https://streamable.com/e/00nuyw" frameborder="0" width="100%" height="100%" allowfullscreen style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div>
         <br>
         <h5>Midscreen - Universal</h5>
-        <p>This combo works universally, has moderate corner carry and allows Ash to stun from 2A2B (or 2B2A). This Sans Culotte route allows Ash to get the 3rd hit on the second [4]6C post-Sans Culotte, getting you 10 more stun.</p>
+        <p>This combo works (almost) universally, has moderate corner carry and allows Ash to stun from 2A2B (or 2B2A). This Sans Culotte route allows Ash to get the 3rd hit on the second [4]6C post-Sans Culotte, getting you 10 more stun.</p>
+        <p>Note: This combo is not automatically timed against Chris/O.Chris and Meitenkun. I recommend using the route in the Fullscreen route in the 5-meter section below.</p>
         <br>
         <div style="width:100%;height:0px;position:relative;padding-bottom:56.250%;"><iframe src="https://streamable.com/e/pjn60k" frameborder="0" width="100%" height="100%" allowfullscreen style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div>
         <h5>Corner</h5>
@@ -51,24 +52,24 @@
     </section>
     <section class="videoBlock container bg-secondary" id="5-meter">
         <h2>5-Meter combos</h2>
-        <div style="width:100%;height:0px;position:relative;padding-bottom:56.250%;"><iframe src="https://streamable.com/e/3mpt6n" frameborder="0" width="100%" height="100%" allowfullscreen style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div>
+        <div style="width:100%;height:0px;position:relative;padding-bottom:56.250%;"><iframe src="https://streamable.com/3kp3lq" frameborder="0" width="100%" height="100%" allowfullscreen style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div>
         <br>
         <h5>Fullscreen</h5>
         <p>This Sans Culotte route will drop vs Heidern, Yamazaki, and Meitenkun.</p>
         <p>Note: For Heidern and Yamazaki, change the first [4]6C to [4]6A. This will cause the second [4]6C to get its 3rd hit and give you the same amount of stun.</p>
         <br>
-        <div style="width:100%;height:0px;position:relative;padding-bottom:56.250%;"><iframe src="https://streamable.com/e/38q7yx" frameborder="0" width="100%" height="100%" allowfullscreen style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div>
+        <div style="width:100%;height:0px;position:relative;padding-bottom:56.250%;"><iframe src="https://streamable.com/jgytut" frameborder="0" width="100%" height="100%" allowfullscreen style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div>
         <h5>Almost Fullscreen</h5>
         <p>This Sans Culotte route is universal but has significantly less corner carry. The 4D QUICK MAX is auto-timed with this route.</p>
     </section>
     <section class="videoBlock container bg-secondary" id="2-meter">
         <h2>Character-Specific combos</h2>
-        <div style="width:100%;height:0px;position:relative;padding-bottom:56.250%;"><iframe src="https://streamable.com/e/34tau8" frameborder="0" width="100%" height="100%" allowfullscreen style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div>
+        <div style="width:100%;height:0px;position:relative;padding-bottom:56.250%;"><iframe src="https://streamable.com/l7a7k8" frameborder="0" width="100%" height="100%" allowfullscreen style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div>
         <br>
         <h5>Meitenkun Corner Carry</h5>
         <p>This route requires at least 100 stun before QUICK MAX in order to stun for 4 meters. (2B2A2B > 4B or 5C/5D > 4B)</p>
         <br>
-        <div style="width:100%;height:0px;position:relative;padding-bottom:56.250%;"><iframe src="https://streamable.com/e/z0xzdd" frameborder="0" width="100%" height="100%" allowfullscreen style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div>
+        <div style="width:100%;height:0px;position:relative;padding-bottom:56.250%;"><iframe src="https://streamable.com/wdquri" frameborder="0" width="100%" height="100%" allowfullscreen style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div>
         <h5>Antonov and Heidern only</h5>
         <p>This route allows Ash to land a 4th [4]6C on Antonov and Heidern, reducing the need for more hits pre-QUICK MAX activation.</p>
     </section>
