fixed position of MTK/Chris note

--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
         <div style="width:100%;height:0px;position:relative;padding-bottom:56.250%;"><iframe src="https://streamable.com/e/00nuyw" frameborder="0" width="100%" height="100%" allowfullscreen style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div>
         <br>
         <h5>Midscreen - Universal</h5>
-        <p>This combo works (almost) universally, has moderate corner carry and allows Ash to stun from 2A2B (or 2B2A). This Sans Culotte route allows Ash to get the 3rd hit on the second [4]6C post-Sans Culotte, getting you 10 more stun.</p>
-        <p>Note: This combo is not automatically timed against Chris/O.Chris and Meitenkun. I recommend using the route in the Fullscreen route in the 5-meter section below.</p>
+        <p>This combo works universally, has moderate corner carry and allows Ash to stun from 2A2B (or 2B2A). This Sans Culotte route allows Ash to get the 3rd hit on the second [4]6C post-Sans Culotte, getting you 10 more stun.</p>
         <br>
         <div style="width:100%;height:0px;position:relative;padding-bottom:56.250%;"><iframe src="https://streamable.com/e/pjn60k" frameborder="0" width="100%" height="100%" allowfullscreen style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div>
         <h5>Corner</h5>
@@ -60,7 +59,8 @@
         <br>
         <div style="width:100%;height:0px;position:relative;padding-bottom:56.250%;"><iframe src="https://streamable.com/e/jgytut" frameborder="0" width="100%" height="100%" allowfullscreen style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div>
         <h5>Almost Fullscreen</h5>
-        <p>This Sans Culotte route is universal but has significantly less corner carry. The 4D QUICK MAX is auto-timed with this route.</p>
+        <p>This Sans Culotte route is (almost) universal but has significantly less corner carry. The 4D QUICK MAX is auto-timed with this route.</p>
+        <p>Note: This combo is not automatically timed against Chris/O.Chris and Meitenkun. I recommend using the route in the Fullscreen route in the 5-meter section below.</p>
     </section>
     <section class="videoBlock container bg-secondary" id="2-meter">
         <h2>Character-Specific combos</h2>
