--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div style="width:100%;height:0px;position:relative;padding-bottom:56.250%;"><iframe src="https://streamable.com/e/jgytut" frameborder="0" width="100%" height="100%" allowfullscreen style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div>
         <h5>Almost Fullscreen</h5>
         <p>This Sans Culotte route is (almost) universal but has significantly less corner carry. The 4D QUICK MAX is auto-timed with this route.</p>
-        <p>Note: This combo is not automatically timed against Chris/O.Chris and Meitenkun. I recommend using the route in the Fullscreen route above.</p>
+        <p>Note: This combo is not automatically timed against Chris/O.Chris and Meitenkun. For those characters, I recommend using the Fullscreen route above.</p>
     </section>
     <section class="videoBlock container bg-secondary" id="2-meter">
         <h2>Character-Specific combos</h2>
